[project]
name = "langchain-genai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langchain>=1.2.6",
    "langchain-community>=0.4.1",
    "langchain-google-genai>=4.2.0",
    "langchain-groq>=1.1.1",
    "langchain-ollama>=1.0.1",
    "langgraph>=1.0.6",
    "python-dotenv>=1.2.1",
]
